--- a/src/app/components/board-user/board-user.component.css
+++ b/src/app/components/board-user/board-user.component.css
@@ -2,6 +2,7 @@
   width: 100%;
   height: 100%;
 }
+
 .mat-expansion-panel {
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
@@ -10,8 +11,13 @@
   margin: 1% 0 0 0;
 }
 
+.inner {
+  background: rgba(255,255,255,0.3);
+}
+
 .mat-expansion-panel:nth-child(1) {
 }
+
 
 .results {
   color: black;
@@ -35,12 +41,10 @@
   padding: .5em 1em;
   border: none;
 
-  background: #e07fff; /* Old browsers */
-  background: -moz-linear-gradient(left, #e07fff 0%, #dbb2fa 99%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(left,  #e07fff 0%, #dbb2fa 99%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to right, #e07fff 0%, #dbb2fa 99%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e07fff', endColorstr='#dbb2fa',GradientType=1 ); /* IE6-9 */
+  background: #f1ea85; /* Old browsers */
+  background: -moz-linear-gradient(left, #fcf3a3 0%, #f1ea85 99%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(left,  #fcf3a3 0%, #f1ea85 99%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to right, #fcf3a3 0%, #f1ea85 99%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcf3a3', endColorstr='#f1ea85',GradientType=1 ); /* IE6-9 */
 }
 
-.inner {
-}
