--- a/src/app/components/board-user/board-user.component.html
+++ b/src/app/components/board-user/board-user.component.html
@@ -12,20 +12,20 @@
   <div class="result" *ngFor = "let history of userHistory">
     <mat-expansion-panel>
       <mat-expansion-panel-header>
-        Quiz z dnia {{history.date |  date:'dd.MM.YYYY HH:mm'}}, o godzinie {{history.date |  date:'HH:mm'}}
+        Quiz z dnia {{history.date |  date:'dd.MM.YYYY\, HH:mm'}}
       </mat-expansion-panel-header>
       <ng-template matExpansionPanelContent>
         <button class="results" type="button" (click)="showResults(history)" [routerLink]="'../quiz/' + history.uuid">
           Zobacz wyniki quizu
         </button>
         <button class="copy" type="button" ngxClipboard [cbContent]="publicLink + history.uuid" >
-          Kliknij tutaj, aby skopiować link do udostępnienia tego quizu znajomym
+          Kliknij tutaj, aby skopiować link publiczny do tego quizu
         </button>
         <mat-expansion-panel class="inner">
           <mat-expansion-panel-header>
             Lista Twoich pytań i odpowiedzi
           </mat-expansion-panel-header>
-          <ng-template matExpansionPanelContent>
+          <ng-template matExpansionPanelContent >
             <div *ngFor="let question of history.quiz.questionsHistory">
               <u>
                 {{question.text}}
