--- a/src/app/components/statistics/statistics.component.css
+++ b/src/app/components/statistics/statistics.component.css
@@ -3,7 +3,8 @@
   height: 100%;
 }
 
-ul {
+
+.table {
   margin-top: 1em;
   columns: 2;
   list-style-type: none;
@@ -12,7 +13,7 @@ ul {
   flex-wrap: wrap;
 }
 
-li {
+.name {
   flex: 0 0 80%;
   border: 1px solid black;
   background: rgba(100, 255, 0, .1);
@@ -24,4 +25,8 @@ li {
 .li-value {
   font-weight: bold;
   flex: 0 0 20%;
+}
+
+#desc {
+  margin: 1em 3em 1em 3em;
 }
