fix for professions in result_quiz

--- a/src/app/components/quiz-details/quizDetails.component.html
+++ b/src/app/components/quiz-details/quizDetails.component.html
@@ -66,7 +66,7 @@
             </li>
           </ul>
           <div class="buttons">
-            <a class="links" target="_blank" [routerLink]="['../zawody/', result.code]"> Lista dostepnych zawodów (w nowej karcie) </a>
+            <a class="links" target="_blank" [routerLink]="['wyszukaj/zawody/', result.code]"> Lista dostepnych zawodów (w nowej karcie) </a>
             <a class="links" target="_blank" [routerLink]="['/statystyki/', result.code]"> Zarobki i struktura zatrudnienia (w nowej karcie) </a>
           </div>
         </ng-template>
