--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -14,6 +14,13 @@
     "content content content content content ";
 }
 
+
+@media screen and (max-width: 400px) {
+  .main {
+    display: block;
+  }
+}
+
 .slogan {
   grid-area: slogan;
 }
