--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -52,6 +52,9 @@
 
 <!-- Footer -->
 <footer>
+  <div class="watermark">
+    <a href="#"> &copy;U mnie działa </a>
+  </div>
   <svg viewBox="0 0 120 20">
     <defs>
       <filter id="goo">
@@ -68,7 +71,4 @@
     <use id="wave2" class="wave" xlink:href="#wave" x="-10" y="0" ></use>
     <use id="wave1" class="wave" xlink:href="#wave" x="-40" y="2" ></use>
   </svg>
-  <div>
-    <a href="#"> &copy;U mnie działa </a>
-  </div>
 </footer>
