fix for professions in result_quiz

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,6 +56,6 @@
     <use id="wave1" class="wave" xlink:href="#wave" x="-40" y="2" ></use>
   </svg>
   <div>
-    <a href="#"> &copy;U mnie działa </a>
+    <a id="sign" href="#"> &copy;U mnie działa </a>
   </div>
 </footer>
