--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,6 +9,11 @@ h1{
   margin: 0;
 }
 
+img {
+  width: 5em;
+  height: 5em;
+}
+
 .logoResponsive {
   height: 64px;
   color: black;
@@ -50,6 +55,7 @@ h1{
 
 .logoResponsive img {
   float: left;
+
 }
 
 .logoResponsive h1 {
